--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ hyper-util = { version = "0.1", features = ["full"] }
 serde_json = "1.0.138"
 google-cloud-storage = "0.24.0"
 dotenv = "0.15.0"
+actix-cors = "0.6"
 
 [[bin]]
 name = "main"
