--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ serde_json = "1.0.138"
 google-cloud-storage = "0.24.0"
 dotenv = "0.15.0"
 actix-cors = "0.6"
+serde = { version = "1.0.217", features = ["serde_derive"] }
+uuid = { version = "1.13.1", features = ["v4"] }
 
 [[bin]]
 name = "main"
