--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,5 @@ dotenv = "0.15.0"
 actix-cors = "0.6"
 serde = { version = "1.0.217", features = ["serde_derive"] }
 uuid = { version = "1.13.1", features = ["v4"] }
+qrcode = "0.14.1"
+image = "0.25.5"
