--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "routes": [
         {
-            "src": "/(.*)(?<!\\.js)$",
+            "src": "/(.*)(?<!(?:\\.js)|(?:\\.css)|(?:\\.avif)|(?:\\.jpg)|(?:\\.jpeg))$",
             "dest": "/index.html"
         }
     ]
